# qt6-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: conan-setup.cmake  conan_provider.cmake
conan_profiles/: android-armv7-clang-17-release  android-armv8-clang-17-release  android-x86-clang-17-release  android-x86_64-clang-17-release  linux-x86_64-gcc-11-debug  linux-x86_64-gcc-11-release  windows-x86_64-gcc-11-debug  windows-x86_64-gcc-11-release  windows-x86_64-msvc-194-debug  windows-x86_64-msvc-194-release
libsrc/: CMakeLists.txt
libsrc/api/: CMakeLists.txt  IDummy.hpp
libsrc/gmock/: CMakeLists.txt  MockIDummy.hpp
libsrc/src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp
libsrc/test/: CMakeLists.txt  DummyTest.cpp
scripts/: build_conan_package.sh
